# Kabal_blackend

./: README.md  main.py  pyproject.toml  questions.json  questions_api.py  render.yaml  requirements.txt  sephirot_logic.py
